--- a/PSoft/backEnd_Lab2/psoft/pom.xml
+++ b/PSoft/backEnd_Lab2/psoft/pom.xml
@@ -39,6 +39,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
 		<!-- Dependencia para o disciplinas.json -->
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
